manifests/dp-nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: otus-proj
  labels:
    app: nginx-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-test
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-data
          mountPath: /homework
        command: ["/bin/bash", "-c"]
        args:
        - |
          cat > /etc/nginx/conf.d/default.conf <<EOF
          server {
            listen 80;
            server_name localhost;
            location / {
              root /homework;
              index index.html;
            }
          }
          EOF
          nginx -g "daemon off;"
        lifecycle:
          preStop:
            exec:
              command: ["rm", "/homework/index.html"]
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
      volumes:
      - name: shared-data
        emptyDir: {}
