manifests/ing-general.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: general-ingress
  namespace: otus-proj
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: general-nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
            service:
              name: grafana-proxy
              port:
                number: 3000
